[gd_scene load_steps=3 format=3 uid="uid://c8qvt5q3jkuv7q"]

[ext_resource type="Script" path="res://scripts/ui/tutorial/tutorial_panel.gd" id="1_yvmqe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yjnxr"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.8, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 5

[node name="TutorialPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvmqe")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(300, 200)
theme_override_styles/panel = SubResource("StyleBoxFlat_yjnxr")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 24
text = "教程标题"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ContentLabel" type="RichTextLabel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "教程内容"

[node name="ImageRect" type="TextureRect" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="NavigationPanel" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PrevButton" type="Button" parent="Panel/VBoxContainer/NavigationPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "上一步"

[node name="ProgressLabel" type="Label" parent="Panel/VBoxContainer/NavigationPanel"]
layout_mode = 2
text = "1/5"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextButton" type="Button" parent="Panel/VBoxContainer/NavigationPanel"]
layout_mode = 2
size_flags_horizontal = 3
text = "下一步"

[node name="SkipButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "跳过教程"

[node name="HighlightRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 100.0
offset_bottom = 100.0
mouse_filter = 2
color = Color(1, 0.8, 0, 0.3)
